# data_source

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
python/: altcoin_symbols_download_and_verify.py  altcoin_symbols_except.json  altcoin_symbols_to_kline.py  download_altcoin_symbols_and_verify.py  download_altcoin_symbols_and_verify_except.json  verify_all_symbols_id.py  verify_data.py  verify_self.py  verify_with_binance_kline_api.py  verify_with_binance_kline_api_last_day.py  verify_with_gate_kline_api.py  verify_with_sma.py
python/depth_verify/: README.md  verify_depth.py
python/ipynb/: margin_interest.ipynb  margin_interest_history.ipynb  margin_interest_live.ipynb
report/: prompt.md
report/issue_report/: 1000000BOBUSDT_issue.md  1000000MOGUSDT_issue.md
report/verify_self/: BTCUSDT_ETHUSDT.report.loss_verify.py
service/: README.md  install.sh  run_full_year.sh
service/altcoin-spot/: data-source-altcoin-spot-boot.service  data-source-altcoin-spot-run.sh  data-source-altcoin-spot.service  data-source-altcoin-spot.timer
service/altcoin-um/: data-source-altcoin-um-boot.service  data-source-altcoin-um-run.sh  data-source-altcoin-um.service  data-source-altcoin-um.timer
service/btceth/: data-source-btceth-boot.service  data-source-btceth-run.sh  data-source-btceth.service  data-source-btceth.timer
service/option/: .last_run  README.md  data-source-option-boot.service  data-source-option-run.sh  install.sh  (+2 more)
spec/: 01-overview.md  02-directory-structure.md  03-cli.md  04-schema.md  10-module-structure.md  11-core-types.md
src/: cli.rs  error.rs  main.rs
(+17 files in other folders)
